--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -12,7 +12,6 @@ $marginLeftWithIcon: c.$grid * 5;
   position: relative;
 
   .inputBlock {
-    margin-top: c.$grid;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -28,6 +27,7 @@ $marginLeftWithIcon: c.$grid * 5;
   }
 
   .inputContainer {
+    margin-top: c.$grid;
     position: relative;
     flex: 1 1 auto;
     display: flex;
@@ -82,6 +82,7 @@ $marginLeftWithIcon: c.$grid * 5;
     letter-spacing: inherit;
     color: inherit;
     height: 100%;
+    width: 100%;
 
     &::placeholder {
       color: c.$colorTextSecondary;
