--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -66,3 +66,8 @@ $sliderThumbShadowBlur: $grid;
 $sliderFillBorderSize: 1px;
 
 $borderRadiusNotification: 3px;
+
+// Table column widths
+$tableColumnMinWidth: 30;
+$tableColumnWidth: 150;
+$tableColumnMaxWidth: 200;
