--- a/packages/ui/src/DateTimeInput.module.scss
+++ b/packages/ui/src/DateTimeInput.module.scss
@@ -21,7 +21,22 @@ $inputWidth: 300px;
     border-radius: 0;
 
     :global .react-datepicker__day-names {
+      margin-bottom: c.$grid * 2;
+
       :global .react-datepicker__day-name {
+        width: c.$grid * 8;
+        height: c.$grid * 8;
+        text-align: center;
+        vertical-align: middle;
+        line-height: c.$grid * 8 !important;
+        margin: 0;
+        color: c.$colorText;
+
+        @include c.typographyBodySmall('bold');
+
+        &:not(:last-of-type) {
+          margin-right: c.$grid * 2;
+        }
       }
     }
   }
@@ -117,6 +132,7 @@ $inputWidth: 300px;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
+      margin-bottom: c.$grid * 2;
 
       .headerMonthAndYear {
         color: c.$colorTextSecondary;
