--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -26,6 +26,7 @@ $colorErrorDark: #891b15 !default;
 
 $colorText: #041a3b !default;
 $colorTextSecondary: #707482 !default;
+$colorTextSubdued: #69707d !default;
 
 $colorAccessibilityOutline: #9648bd !default;
 
