--- a/packages/ui/src/Calendar/Calendar.module.scss
+++ b/packages/ui/src/Calendar/Calendar.module.scss
@@ -128,6 +128,10 @@ $inputHeight: 277px;
 
     :global .react-datepicker-time__input-container {
       margin: 0 c.$grid 0 c.$grid * 5;
+
+      :global .react-datepicker-time__input {
+        margin: 0;
+      }
     }
   }
 }
@@ -160,10 +164,6 @@ $inputHeight: 277px;
 
         @include c.typographyBodySmall('bold');
       }
-    }
-
-    .swag {
-      background-color: red;
     }
   }
 }
