feat: add optional IconButton to Card's title

--- a/packages/ui/src/Card.module.scss
+++ b/packages/ui/src/Card.module.scss
@@ -16,6 +16,10 @@
     .icon {
       margin-right: c.$grid * 2.5;
     }
+
+    .iconButton {
+      margin-left: c.$grid * 2.5;
+    }
   }
 
   .separator {
