--- a/packages/ui/src/SelectField.module.scss
+++ b/packages/ui/src/SelectField.module.scss
@@ -98,12 +98,12 @@ $select: ':global .hz-select-field__control';
 // when .isMulti is true, we have some tweaks overall
 .multiContainer {
   :global .hz-select-field__value-container--has-value {
-    margin-left: -c.$grid * 1.5; // padding is narrower in .multiContainer (when it has any values selected)
+    margin-left: -1.5 * c.$grid; // padding is narrower in .multiContainer (when it has any values selected)
   }
 
   :global .hz-select-field__indicators {
     align-items: flex-start;
-    margin-top: c.$grid * 1.5;
+    margin-top: c.$grid * 1.6;
   }
 
   .multiValue {
