--- a/packages/ui/src/Card.module.scss
+++ b/packages/ui/src/Card.module.scss
@@ -11,14 +11,18 @@
 
     display: flex;
     align-items: center;
-    margin: 0 0 c.$grid * 4;
+    margin-bottom: c.$grid * 4;
 
     .icon {
       margin-right: c.$grid * 2.5;
     }
 
-    .iconButton {
-      margin-left: c.$grid * 2.5;
+    .title {
+      margin: 0;
+
+      &.space {
+        margin-right: c.$grid * 2.5;
+      }
     }
   }
 
