feat: timefield scaffold with focus

--- a/packages/ui/src/Calendar/CalendarTime.module.scss
+++ b/packages/ui/src/Calendar/CalendarTime.module.scss
@@ -10,7 +10,7 @@ $headerHeight: 34px;
 $outlinePreservingPadding: c.$grid * 1.25;
 
 .container {
-  .header {
+  .input {
     display: flex;
     justify-content: center;
     align-items: center;
