--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -13,6 +13,8 @@ $borderRadiusToast: 37px !default;
 
 $borderRadiusBadge: 37px !default;
 
+$borderRadiusTimeField: 3px !default;
+
 // It does not make sense to express separator width in REMs since we do not need it to scale with the base font size
 $separatorWidth: 1px !default;
 
