feat: custom time components works

--- a/packages/ui/src/Calendar/Calendar.module.scss
+++ b/packages/ui/src/Calendar/Calendar.module.scss
@@ -131,6 +131,10 @@ $inputHeight: 277px;
 
       :global .react-datepicker-time__input {
         margin: 0;
+
+        input {
+          width: auto;
+        }
       }
     }
   }
