--- a/packages/ui/src/Calendar/components/CalendarTime.module.scss
+++ b/packages/ui/src/Calendar/components/CalendarTime.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/constants' as c;
-@use '../../styles/helpers' as h;
+@use '../../../styles/constants' as c;
+@use '../../../styles/helpers' as h;
 
 $calendarHeaderHeight: 26px;
 $calendarHeaderMarginBottom: 1px;
