--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -40,6 +40,7 @@ $marginLeftWithIcon: c.$grid * 5;
 
   .inputIcon,
   .inputIconTrailing {
+    pointer-events: none;
     position: absolute;
     top: 50%;
     // c.$grid * 9 / 2 is half of the padding. We need to shift it to the left just a bit to account for the border width
